Bug 1751339 - Revert "Replace gtk_widget_reparent", r=emilio

Switching to `gtk_container_[add|remove]` not only looked less
elegant but also broke input method window positions. Revert
it for now, until someone has time to dive deeper into the issue.

Differential Revision: https://phabricator.services.mozilla.com/D137233